syntax = "proto3";

option go_package = "github.com/c31io/voxov/services/authentication/sms";

package sms;

service VeriCode {
    rpc SendVeriCode (VeriCodeRequest) returns (VeriCodeReply);
}

message VeriCodeRequest {
    uint32 coutry_code = 1;
    uint64 subscriber_number = 2;
}

message VeriCodeReply {
    uint32 veri_code = 1;
    uint32 error = 2;
}
